# yyid.rs

./: .rustfmt.toml  .travis.yml  Cargo.toml  LICENSE-MIT  LICENSE.txt  Makefile  README.md  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  rust.yml
benches/: yyid_vs_uuid_bench.rs
examples/: basic.rs  release-tag.rs  version.rs
include/: libyyid.h
src/: fmts.rs  lib.rs  refs.rs  uuid.rs
