[package]
name = "yyid"
version = "0.7.0-pre"
authors = ["Christoph Grabo <asaaki@mannaz.cc>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/asaaki/yyid.rs"
repository = "https://github.com/asaaki/yyid.rs"
description = "Yyid generator (random tokens like UUIDv4, but using all the bits)"
keywords = ["yyid", "uuid", "unique", "random", "token"]
# https://crates.io/category_slugs
categories = ["data-structures", "no-std"]
exclude = [".github/**"]

[badges]
maintenance = { status = "as-is" }

[lib]
bench = false

[dependencies]
libc = "0.2"
getrandom = "0.1"

[dev-dependencies]
criterion = "0.3"
# 0.8 still uses the faster but less compatible `rand` implementation for v4
uuid = { git = "https://github.com/uuid-rs/uuid", rev = "9bb93b6", features = ["v4"] }

[features]
std = []

[[bench]]
name = "yyid_vs_uuid_bench"
harness = false
