[package]
name = "yyid"
version = "0.7.0-pre"
authors = ["Christoph Grabo <asaaki@mannaz.cc>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/asaaki/yyid.rs"
repository = "https://github.com/asaaki/yyid.rs"
description = "Yyid generator (random tokens like UUIDv4, but using all the bits)"
keywords = ["yyid", "uuid", "unique", "random", "token"]
# https://crates.io/category_slugs
categories = ["data-structures", "no-std"]
exclude = [".github/**"]

[badges]
maintenance = { status = "as-is" }

[lib]
bench = false

[[bench]]
name = "yyid_vs_uuid_bench"
harness = false

[features]
std = []

[dependencies]
libc = "0.2"
getrandom = "0.2"

[dev-dependencies]
criterion = "0.4"
uuid = { version = "1.0", features = ["v4"] }
