[package]
name = "yyid"
version = "0.7.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/asaaki/yyid.rs"
repository = "https://github.com/asaaki/yyid.rs"
description = "Yyid generator (random tokens like UUIDv4, but using all the bits)"
keywords = ["yyid", "uuid", "unique", "random", "token"]
# https://crates.io/category_slugs
categories = ["data-structures", "no-std"]
exclude = [".github/**"]

[badges]
maintenance = { status = "as-is" }

[lib]
bench = false

[[bench]]
name = "yyid_vs_uuid_bench"
harness = false

[features]
default = []

std = []
fast-rng = ["rand"]
uuid = ["dep:uuid"]

[dependencies]
libc = "0.2.137"
getrandom = "0.2.8"

rand = { version = "0.8.5", optional = true }
uuid = { version = "1.2.2", optional = true }

[dev-dependencies]
criterion = "0.5.1"
pretty_assertions = "1.3.0"
uuid = { version = "1.2.2", features = ["v4"] }
